readme changes and correcting footer links

--- a/src/index.html
+++ b/src/index.html
@@ -66,25 +66,11 @@
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">André Serudo</a>.
+        Coded by <a href="https://github.com/andreserudo" target="_blank">André Serudo</a>.
       </p>
     </footer>
   
 
   </div>
-<!--
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  -->  
 </body>
 </html>
